--- a/apps/web/src/view/proveedor/index.twig
+++ b/apps/web/src/view/proveedor/index.twig
@@ -4,84 +4,46 @@
 {% extends 'template/layout/baseProveedor.twig' %}
 
 {% block content %}
-  <div class="container">
-
-    <div class="row gap-xs">
-      <div class="col-xs-12 col-md-8 order-xs-2 order-md-1">
-
-        <div class="section section_offset-bottom">
-          <h1>Getting Startedd asd</h1>
+    <div>
+        <h1  class="flex-1 text-xl font-semibold tracking-tight shrink-0 whitespace-nowrap sm:grow-0"> Elige tu plan </h1>
+        <p data-v-f629621e="" class="mt-2 text-sm text-muted-foreground">Cambia tu plan en cualquier momento</p>
+        <div class="flex">
+            <div class="relative flex items-center rounded-lg border p-4 [&amp;>svg~*]:pl-7 [&amp;>svg+div]:translate-y-[-3px] [&amp;>svg]:absolute [&amp;>svg]:left-4 [&amp;>svg]:top-4 [&amp;>svg]:text-foreground mt-5 py-3 bg-[#D8DAE3] border-none rounded-l-lg w-auto !pr-9" role="alert">
+            <div  class="w-[30px] bg-[#44A5FF] h-full absolute left-0 top-0 rounded-l-lg"></div>
+            <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-info-icon w-4 h-4 ml-9 !fill-transparent"><circle cx="12" cy="12" r="10"></circle><path d="M12 16v-4"></path><path d="M12 8h.01"></path></svg><div data-v-f629621e="" class="text-sm [&amp;_p]:leading-relaxed !transform-none ml-4"> 
+            Tu plan actual es <strong data-v-f629621e="" class="uppercase font-bold">STARTER</strong></div></div>
         </div>
+        <div>
+            <nav class="tabs tabs-bordered" aria-label="Tabs" role="tablist" aria-orientation="horizontal">
+            <button type="button" class="tab active-tab:tab-active active" id="tabs-basic-item-1" data-tab="#tabs-basic-1" aria-controls="tabs-basic-1" role="tab" aria-selected="true" >
+                Home
+            </button>
+            <button type="button" class="tab active-tab:tab-active" id="tabs-basic-item-2" data-tab="#tabs-basic-2" aria-controls="tabs-basic-2" role="tab" aria-selected="false" >
+                Profile
+            </button>
+            <button type="button" class="tab active-tab:tab-active" id="tabs-basic-item-3" data-tab="#tabs-basic-3" aria-controls="tabs-basic-3" role="tab" aria-selected="false" >
+                Messages
+            </button>
+            </nav>
 
-        <section class="section section_offset border-top">
-          <h2 class="section__title">Overview</h2>
-
-          <div class="section__body">
-            <p>{{ APP_DESCRIPTION }}.</p>
-
-            <p>Vite's requirements and documentation you'll find on
-              <a href="https://vitejs.dev/" target="_blank">its official website</a>.</p>
-
-            <p>This starter is delivering with ready-to-use utils, styled components, helpers and much more. Its overview is available in
-              <a href="/components">components</a>
-              section.</p>
-          </div>
-        </section>
-
-        <section class="section section_offset border-top">
-          <h2 class="section__title">How to use</h2>
-
-          <div class="section__body">
-            <h4 class="font-regular">Instalation</h4>
-            <div class="box">
-              <pre>
-<span class="color-muted"># Clone the repository</span>
-<span class="color-primary">git clone</span> {{ APP_REPOSITORY }}.git
-
-<span class="color-muted"># Go to the folder</span>
-<span class="color-primary">cd</span> {{ APP_NAME }}
-
-<span class="color-muted"># Install packages</span>
-<span class="color-primary">npm</span> i
-
-<span class="color-muted"># Remove the link to the original repository</span>
-<span class="color-muted"># - if you use Windows system</span>
-<span class="color-primary">Remove-Item</span> .git <span class="color-primary">-Recurse -Force</span>
-<span class="color-muted"># - or if you use Unix system</span>
-<span class="color-primary">rm -rf</span> .git
-</pre>
+            <div class="mt-3">
+            <div id="tabs-basic-1" role="tabpanel" aria-labelledby="tabs-basic-item-1">
+                <p class="text-base-content/80">
+                Welcome to the <span class="text-base-content/90 font-semibold">Home tab!</span> Explore the latest updates and news here.
+                </p>
             </div>
-
-            <h4 class="font-regular">Development</h4>
-            <div class="box">
-              <pre>
-<span class="color-muted"># Start development mode with live-server</span>
-<span class="color-primary">npm</span> run dev
-</pre>
+            <div id="tabs-basic-2" class="hidden" role="tabpanel" aria-labelledby="tabs-basic-item-2">
+                <p class="text-base-content/80">
+                This is your <span class="text-base-content/90 font-semibold">Profile</span> tab, where you can update your personal information and manage your account details.
+                </p>
             </div>
-
-            <h4 class="font-regular">Building</h4>
-            <div class="box">
-              <pre>
-<span class="color-muted"># Build static files for production</span>
-<span class="color-primary">npm</span> run build
-<span class="color-muted"># or</span>
-<span class="color-primary">npm</span> run prod
-
-<span class="color-muted"># Start server for build preview</span>
-<span class="color-primary">npm</span> run preview
-</pre>
+            <div id="tabs-basic-3" class="hidden" role="tabpanel" aria-labelledby="tabs-basic-item-3">
+                <p class="text-base-content/80">
+                <span class="text-base-content/90 font-semibold">Messages:</span> View your recent messages, chat with friends, and manage your conversations.
+                </p>
             </div>
-
-          </div>
-        </section>
-
-      </div>
-
-      <div class="col-xs-12 col-md-3 offset-md-1 align-self-start position-sticky order-xs-1 order-md-2 bg-body">
-        <div class="section__navigation"></div>
-      </div>
+            </div>
+    
+        </div>
     </div>
-
-  </div>
 {% endblock %}
